# toPetscProject

./: README.md
CMakeLists/CMakeLists-lib/: CMakeLists.txt
CMakeLists/CMakeLists-pkgconfig/: CMakeLists.txt
CMakeLists/CMakeLists-share/: CMakeLists.txt
CMakeLists/CMakeLists-share/sub/: CMakeLists.txt
petsclib/petsc-double/include-double/: petscconf.h  petscconf_poison.h  petscconfiginfo.h  petscmachineinfo.h
petsclib/petsc-double/lib/petsc/conf/: RDict.db  configure-hash  configure.log.bkp  files  petscvariables  pkg.conf.sowing  reconfigure-arch-ci-linux-intel-mkl-single.py
petsclib/petsc-double/lib/petsc/conf/modules/petsc/: 3.16.1
petsclib/petsc-double/lib/pkgconfig/: PETSc.pc
petsclib/petsc-single/include-single/: petscconf.h  petscconf_poison.h  petscconfiginfo.h  petscmachineinfo.h  petscpkg_version.h
petsclib/petsc-single/lib/petsc/conf/: RDict.db  configure-hash  files  petscvariables  pkg.conf.sowing  pkg.gitcommit.sowing  reconfigure-arch-ci-linux-intel-mkl-single.py
petsclib/petsc-single/lib/petsc/conf/modules/petsc/: 3.16.0
petsclib/petsc-single/lib/pkgconfig/: PETSc.pc
